# hl7lite

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py
benchmarks/: basic.py
src/hl7lite/cython/: __init__.py  parse.pyi  parse.pyx
tests/: samples.py  test_parse.py
